Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem nihil dolor aspernatur quae asperiores temporibus quos eum hic ratione nisi! Iusto hic earum aperiam assumenda quasi rem, numquam esse harum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cupiditate officiis dignissimos exercitationem maxime voluptatem consequuntur id sint, doloribus similique eveniet perspiciatis molestias illum unde error minus inventore! Vero, dignissimos.</p>
 </body>
 </html>
